@@ -14,6 +14,7 @@ cd ${rootdir}/ri5cy/verilator-model
 echo "Starting at $(date)" >> ${rootdir}/logs/gdbserver-build.log 2>&1
 
 echo -n "Building RI5CY..."
+echo "Building RI5CY" >> ${rootdir}/logs/gdbserver-build.log 2>&1
 
 if ! make >> ${rootdir}/logs/gdbserver-build.log 2>&1
 then
@@ -28,11 +29,13 @@ fi
 cd ${rootdir}/build/gdbserver
 
 echo -n "Configuring GDBserver..."
+echo "Configuring GDBserver" >> ${rootdir}/logs/gdbserver-build.log 2>&1
 
 if ! ${rootdir}/riscv-gdbserver/configure \
      --with-verilator-headers=/opt/verilator/share/verilator/include \
-     --with-ri5cy-modeldir=${rootdir}ri5cy/verilator-model/obj_dir \
+     --with-ri5cy-modeldir=${rootdir}/ri5cy/verilator-model/obj_dir \
      --with-binutils-incdir= \
+     --with-gdbsim-incdir= \
      --prefix=${rootdir}/install >> ${rootdir}/logs/gdbserver-build.log 2>&1
 then
     echo "failed"
@@ -42,8 +45,9 @@ else
 fi
 
 echo -n "Building GDBserver..."
+echo "Building GDBserver" >> ${rootdir}/logs/gdbserver-build.log 2>&1
 
-if ! make -j 4 all-gcc >> ${rootdir}/logs/gdbserver-build.log 2>&1
+if ! make -j 4 >> ${rootdir}/logs/gdbserver-build.log 2>&1
 then
     echo "failed"
     exit 1
@@ -52,8 +56,9 @@ else
 fi
 
 echo -n "Installing GDBserver..."
+echo "Installing GDBserver" >> ${rootdir}/logs/gdbserver-build.log 2>&1
 
-if ! make -j 4 install-gcc >> ${rootdir}/logs/gdbserver-build.log 2>&1
+if ! make -j 4 install >> ${rootdir}/logs/gdbserver-build.log 2>&1
 then
     echo "failed"
     exit 1
