@@ -11,12 +11,15 @@ mkdir -p build/gnu/newlib
 rm -f ${rootdir}/logs/gnu-build.log
 touch ${rootdir}/logs/gnu-build.log
 
+export PATH=${rootdir}/install/bin:${PATH}
+
 # Binutils/GDB
 
 cd ${rootdir}/build/gnu/binutils-gdb
 echo "Starting at $(date)" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 echo -n "Configuring Binutils/GDB..."
+echo "Configuring Binutils/GDB" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! ${rootdir}/gnu/binutils-gdb/configure \
      --prefix=${rootdir}/install \
@@ -30,6 +33,7 @@ if ! ${rootdir}/gnu/binutils-gdb/configure \
      --with-xmlto=no \
      --with-fop=no \
      --disable-multilib \
+     --enable-plugins \
      --target=riscv32-unknown-elf \
      --with-sysroot=${rootdir}/install/riscv32-unknown-elf/sysroot \
      --enable-poison-system-directories \
@@ -43,6 +47,7 @@ else
 fi
 
 echo -n "Building Binutils/GDB..."
+echo "Building Binutils/GDB" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! make -j 4 >> ${rootdir}/logs/gnu-build.log 2>&1
 then
@@ -53,6 +58,7 @@ else
 fi
 
 echo -n "Installing Binutils/GDB..."
+echo "Installing Binutils/GDB" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! make -j 4 install >> ${rootdir}/logs/gnu-build.log 2>&1
 then
@@ -67,6 +73,7 @@ fi
 cd ${rootdir}/build/gnu/gcc-stage-1
 
 echo -n "Configuring GCC Stage 1..."
+echo "Configuring GCC Stage 1" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! ${rootdir}/gnu/gcc/configure \
      --prefix=${rootdir}/install \
@@ -103,6 +110,7 @@ if ! ${rootdir}/gnu/gcc/configure \
      --without-headers \
      --with-newlib \
      --disable-largefile \
+     --enable-plugins \
      --disable-nls \
      --enable-checking=yes >> ${rootdir}/logs/gnu-build.log 2>&1
 then
@@ -113,6 +121,7 @@ else
 fi
 
 echo -n "Building GCC Stage 1..."
+echo "Building GCC Stage 1" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! make -j 4 all-gcc >> ${rootdir}/logs/gnu-build.log 2>&1
 then
@@ -123,6 +132,7 @@ else
 fi
 
 echo -n "Installing GCC Stage 1..."
+echo "Installing GCC Stage 1" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! make -j 4 install-gcc >> ${rootdir}/logs/gnu-build.log 2>&1
 then
@@ -137,6 +147,7 @@ fi
 cd ${rootdir}/build/gnu/newlib
 
 echo -n "Configuring Newlib..."
+echo "Configuring Newlib" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! ${rootdir}/gnu/newlib/configure \
      --prefix=${rootdir}/install \
@@ -144,7 +155,7 @@ if ! ${rootdir}/gnu/newlib/configure \
      --localstatedir=${rootdir}/install/var \
      --target=riscv32-unknown-elf \
      --with-sysroot=${rootdir}/install/riscv32-unknown-elf/sysroot \
-     CFLAGS_FOR_TARGET="-DPREFER_SIZE_OVER_SPEED=1 -Os" \
+     CFLAGS_FOR_TARGET="-DPREFER_SIZE_OVER_SPEED=1 -Os -march=rv32imc -mabi=ilp32" \
      --disable-newlib-fvwrite-in-streamio \
      --disable-newlib-fseek-optimization \
      --enable-newlib-nano-malloc \
@@ -162,6 +173,7 @@ else
 fi
 
 echo -n "Building Newlib..."
+echo "Building Newlib" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! make -j 4 >> ${rootdir}/logs/gnu-build.log 2>&1
 then
@@ -172,6 +184,7 @@ else
 fi
 
 echo -n "Installing Newlib..."
+echo "Installing Newlib" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! make -j 4 install >> ${rootdir}/logs/gnu-build.log 2>&1
 then
@@ -186,6 +199,7 @@ fi
 cd ${rootdir}/build/gnu/gcc-stage-2
 
 echo -n "Configuring GCC Stage 2..."
+echo "Configuring GCC Stage 2" >> ${rootdir}/logs/gnu-build.log 2>&1
 
 if ! ${rootdir}/gnu/gcc/configure \
      --with-build-time-tools=${rootdir}/install/riscv32-unknown-elf/bin \
@@ -193,6 +207,7 @@ if ! ${rootdir}/gnu/gcc/configure \
      --sysconfdir=${rootdir}/install/etc \
      --localstatedir=${rootdir}/install/var \
      --disable-shared \
+     --enable-plugins \
      --enable-static \
      --disable-gtk-doc \
      --disable-gtk-doc-html \
@@ -232,8 +247,9 @@ else
 fi
 
 echo -n "Building GCC Stage 2..."
+echo "Building GCC Stage 2" >> ${rootdir}/logs/gnu-build.log 2>&1
 
-if ! make -j 4 all-gcc >> ${rootdir}/logs/gnu-build.log 2>&1
+if ! make -j 4 all >> ${rootdir}/logs/gnu-build.log 2>&1
 then
     echo "failed"
     exit 1
@@ -242,8 +258,9 @@ else
 fi
 
 echo -n "Installing GCC Stage 2..."
+echo "Installing GCC Stage 2" >> ${rootdir}/logs/gnu-build.log 2>&1
 
-if ! make -j 4 install-gcc >> ${rootdir}/logs/gnu-build.log 2>&1
+if ! make -j 4 install >> ${rootdir}/logs/gnu-build.log 2>&1
 then
     echo "failed"
     exit 1
