@@ -14,9 +14,12 @@ cd ${rootdir}/build/llvm
 echo "Starting at $(date)" >> ${rootdir}/logs/llvm-build.log 2>&1
 
 echo -n "Configuring Clang/LLVM..."
+echo "Configuring Clang/LLVM" >> ${rootdir}/logs/llvm-build.log 2>&1
 
 if ! cmake \
-     -DCMAKE_BUILD_TYPE=Debug \
+     -DCMAKE_BUILD_TYPE=Release \
+     -DLLVM_OPTIMIZED_TABLEGEN=ON \
+     -DLLVM_ENABLE_ASSERTIONS=ON \
      -DBUILD_SHARED_LIBS=ON \
      -DCMAKE_INSTALL_PREFIX=${rootdir}/install \
      -DLLVM_EXPERIMENTAL_TARGETS_TO_BUILD=RISCV  \
@@ -31,8 +34,35 @@ else
 fi
 
 echo -n "Building Clang/LLVM..."
+echo "Building Clang/LLVM" >> ${rootdir}/logs/llvm-build.log 2>&1
 
 if ! ninja -j 4 install >> ${rootdir}/logs/llvm-build.log 2>&1
+then
+    echo "failed"
+    exit 1
+else
+    echo "succeeded"
+fi
+
+echo -n "Linking clang..."
+echo "Linking clang" >> ${rootdir}/logs/llvm-build.log 2>&1
+
+cd ${rootdir}/install/bin
+
+if ! ln -sf clang riscv32-unknown-elf-clang
+then
+    echo "failed"
+    exit 1
+else
+    echo "succeeded"
+fi
+
+echo -n "Linking clang++..."
+echo "Linking clang++" >> ${rootdir}/logs/llvm-build.log 2>&1
+
+cd ${rootdir}/install/bin
+
+if ! ln -sf clang++ riscv32-unknown-elf-clang++
 then
     echo "failed"
     exit 1
